# MicroLLM

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_deps.sh  build_env.sh  format.sh  install_cuda.sh  main.cpp
data/: hf_tinyllama_chat.py
include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tiktoken.h  unicode-data.h  unicode.h
include/model/: config.h  llama2.h  llama2_config.h  model.h
include/op/: embedding.h  encode.h  layer.h  matmul.h
include/tensor/: tensor.h
src/alloc/: cpu_alloc.cpp
src/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp  cpu_alloc.cpp  unicode-data.cpp  unicode.cpp
src/buffer/: buffer.cpp
src/model/: llama2.cpp  model.cpp
src/op/: encode.cpp  layer.cpp  matmul.cpp
src/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
src/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
src/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  emb_kernel.cu  emb_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  swiglu_kernel.cu  swiglu_kernel.cuh
src/tensor/: tensor.cpp
test/: test_name.cpp
test/test_op/: test_cu_add.cpp  test_cu_emb.cpp  test_cu_matmul.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_scale.cpp  test_cu_softmax.cpp  test_cu_swiglu.cpp  test_encode.cpp  test_load.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
tools/: README.md  export.py  export_llama3.py  hf_llama3_infer.py  hf_qwen2_infer.py  model.py
